--- a/Blog.html
+++ b/Blog.html
@@ -43,7 +43,8 @@
                     Fique por dentro de tudo, se inscreva na nossa newslatter
                 </h1>
                 <form method="post" id="formulario">
-                    <div class="form">
+                    <div id="corpo form">
+                        <div class="form">
                         <label for="nome">Nome:</label>
                         <input type="text" id="nome" />
                     </div>
@@ -55,6 +56,7 @@
                         <input type="checkbox" name="autorizar" id="autorizar"><span id="autorize">Autorizo a Engenhe Jr a me enviar um e-mail</span> 
                     </div>
                         <button id="botao">enviar</button>
+                    </div>
                 </form>
             </div>
         </div>
